--- a/first-server/src/main/resources/templates/widget/success.html
+++ b/first-server/src/main/resources/templates/widget/success.html
@@ -141,7 +141,7 @@
   // 결제 취소 요청 함수
   async function cancelPayment() {
     const cancelRequestData = {
-      cancelReason: '사용자 요청으로 취소',  // 취소 사유 (예시로 넣은 값)
+      cancelReason: '사용자 요청으로 취소',
     };
 
 
