--- a/first-server/src/main/resources/templates/widget/success.html
+++ b/first-server/src/main/resources/templates/widget/success.html
@@ -159,6 +159,58 @@
 
   // 결제 성공 시 호출되는 함수
   onPaymentSuccess(); // 페이지 로딩 후 결제 성공 시 버튼을 생성
+
+
+</script>
+
+<script>
+  async function successPartial() {
+    const buttonContainer2 = document.createElement('div');
+    buttonContainer2.id = 'button-container'; // 버튼을 담을 div 생성
+
+    // 결제 취소 버튼 생성
+    const cancelButton2 = document.createElement('button');
+    cancelButton2.textContent = '결제 한번 더 취소';
+    cancelButton2.id = 'cancelButton2';
+
+    // 버튼 클릭 시 취소 요청 함수 호출
+    cancelButton2.addEventListener('click', cancelPayment2);
+
+    // 버튼을 버튼 컨테이너에 추가
+    buttonContainer2.appendChild(cancelButton2);
+
+    // 페이지 맨 하단에 버튼을 추가
+    document.body.appendChild(buttonContainer2);
+  }
+  async function cancelPayment2() {
+    const cancelRequestData2 = {
+      cancelReason: '사용자 요청으로 취소',  // 취소 사유 (예시로 넣은 값)
+      amount : 5300
+    };
+
+
+    const response = await fetch("/api/v1/s1/payment/cancel", {
+      method: "POST",
+      headers: {
+        "Authorization": `Bearer ${token}`,
+        "Content-Type": "application/json",
+      },
+      body: JSON.stringify(cancelRequestData2),
+    });
+
+    if (!response.ok) {
+      console.error(`Error: ${response.status} - ${response.statusText}`);
+      // 에러 처리 로직
+    } else {
+      const data = await response.json();
+      console.log('Success:', data);  // 정상 응답이 왔을 때 데이터 확인
+    }
+
+
+
+  }
+
+  successPartial()
 </script>
 </body>
 </html>
